force-app/main/default/objects/Chat_Message__c/Chat_Message__c.object-meta.xml
<CustomObject>
    <label>Chat Message</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>