force-app/main/default/objects/Chat_Message__c/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <label>Message Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>