force-app/main/default/objects/Chat_Message__c/fields/Readed__c.field-meta.xml
<CustomField>
    <fullName>Readed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Readed</label>
    <type>Checkbox</type>
</CustomField>