force-app/main/default/objects/Chat_Message__c/fields/Temp_Id__c.field-meta.xml
<CustomField>
    <fullName>Temp_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Temp Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>