force-app/main/default/objects/Chat_Message__c/fields/Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date__c</fullName>
    <description>Date of new, edit, delete, error actions</description>
    <label>Updated Date</label>
    <type>DateTime</type>
</CustomField>